# COMP9517_20T1

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
CSP_utils/: pred_server.py  setup_win.py
docs/: reference.md  tasks.md
docs/bibTex/: 12.bib  13.bib
evaluation/detection/: write_bb_to_file.py
evaluation/detection/detectors/: yolo.py
evaluation/detection/ground_truth/: 000001.txt  (+794 more)
experiments/: background_subtraction.ipynb
ground_truth/: CSP_0.15.txt  CSP_0.15_no_background.txt  CSP_0.2.txt  CSP_0.25.txt  CSP_0.25_no_background.txt  CSP_0.2_no_background.txt  CSP_0.3.txt  CSP_0.3_no_background.txt  CSP_0.5.txt  CSP_0.5_no_background.txt  README.md  reformat_gt.py
pedestrian_monitor/: __init__.py  __main__.py  console_arguments.py  draw_utils.py  file_handlers.py  mouse_handlers.py  sort_tracker.py
pedestrian_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pedestrian_monitor/clusterers/: __init__.py  distance_clusterer.py  path_distance_agglomerative.py  sample_clusterer.py  trajectory_agglomerative.py  trajectory_agglomerative_alt.py  trajectory_agglomerative_track.py
pedestrian_monitor/detectors/: csp_detector.py  gt_detector.py  sample_detector.py  yolo_detector.py
pedestrian_monitor/preprocessors/: background_subtraction.py  sample_preprocessor.py
pedestrian_monitor/trackers/: gt_tracker.py  pass_through_tracker.py  sample_tracker.py  simple_tracker.py  sort.py  sort_tracker.py
src/: play.py
src/models/: cv2_haarcascade.py  cv2_hog.py
src/test/: play.py
tests/: test_pedestrian_monitor.py
(+7372 files in other folders)
